<resources>
    <string name="app_name">Assignment5</string>
    <string name="add_image">Add image</string>
    <string name="open_next_page">Open next page</string>
    <string name="todo">TODO</string>
    <string name="go_to_the_first_page">Go to the first page</string>
    <string name="settings">SETTINGS</string>
    <string name="about">ABOUT</string>
    <string name="exit">EXIT</string>
</resources>