<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/overflowMenu"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title=""
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/settings"
                app:showAsAction="never" />
            <item
                android:id="@+id/about"
                android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/about"
                app:showAsAction="never" />
            <item
                android:id="@+id/exit"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/exit"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>